kubernetes/dev/pocSiuDevelopmentDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: poc-siu-development
  name: poc-siu-development
spec:
  replicas: 5
  selector:
    matchLabels:
      app: poc-siu
      env: development
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 1
  template:
    metadata:
      namespace: poc-siu-development
      labels:
        app: poc-siu
        env: development
    spec:
      containers:
      - name: poc-siu-development-pod
        image: registry.gurdil.fr:4443/poc-siu:v0.01-amd64
        ports:
        - containerPort: 9000
