kubernetes/dev/pocSiuDevelopmentServiceClusterIP.yml
apiVersion: v1
kind: Service
metadata:
  namespace: poc-siu-development
  name: svc-poc-siu-development
spec:
  selector:
    app: poc-siu
    env: development
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP
